--- a/package.json
+++ b/package.json
@@ -36,5 +36,7 @@
     "stylelint-scss": "^3.18.0",
     "webpack-stream": "^6.1.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@glidejs/glide": "^3.4.1"
+  }
 }
